--- a/assets/01-html/05-textLevel/textLevel.html
+++ b/assets/01-html/05-textLevel/textLevel.html
@@ -10,12 +10,10 @@
 				링크된 페이지는 보통 브라우저의 현재 윈도우에 표시되며, 이것은 target 속성으로 변경할 수 있습니다.<br>
 				<mark>HTML5에서는 해당 요소의 charset, coords, name, rev, shape 속성을 더 이상 지원하지 않습니다.</mark>
 			</p>
-
-			<div class="view_editor ex_code mt_l" data-target="html/05-textLevel/5.1.a_element_basic.html">
-				<h3 class="ve_tit">a element - css 기본값</h3>
-				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
-					<div class="code_wrap"><textarea></textarea></div>
-				</div>
+			<div class="line_code mt_s">
+				<strong>CSS 기본값 :</strong>
+				<p class="t_blue"><b>a:link, a:visited {color: (internal value); text-decoration: underline; cursor: auto;}</b></p>
+				<p class="t_blue"><b>a:link:active, a:visited:active {color: (internal value);}</b></p>
 			</div>
 
 			<div class="ol_lst mt_m">
@@ -240,24 +238,211 @@
 
 	<article id="em_element" class="uk_course">
 		<h2>em element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				Emphasis 요소 (&lt;em&gt;) 는 강조된 텍스트(emphasized text)를 표시할때 사용합니다. &lt;em&gt; 요소는 중첩될수 있으며, 중첩의 단계는 강조의 단계를 나타냅니다.<br>
+				일반적으로 이 요소는 이탤릭체로 표시됩니다.<br>
+				하지만, 이 요소는 단순히 이탤릭 타입을 표시하기 위해 사용되어서는 안됩니다.(단순히 이탤릭 타입을 표시하고 싶다면, CSS 스타일링을 사용하세요.)
+			</p>
+			<div class="line_code mt_s">
+				<p class="t_blue"><b>CSS 기본값 : em {font-style: italic;}</b></p>
+			</div>
+
+			<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.2.em_element.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="em">
+				<li class="ie">지원</li>
+				<li class="edge">지원</li>
+				<li class="chrome">1.0</li>
+				<li class="firefox">1.0</li>
+				<li class="opera">지원</li>
+				<li class="safari">지원</li>
+			</ul>
+		</div>
 	</article>
 	<!-- em element -->
 
 
 	<article id="i_element" class="uk_course">
 		<h2>i element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				일반적으로 이 요소는 이탤릭체로 표시됩니다.<br>
+				HTML 4.01에서 &lt;i&gt; 요소는 이탤릭체의 텍스트로만 표현되었지만, HTML5에서는 반드시 이탤릭체로만 표현되지는 않습니다. 스타일시트를 사용하여 &lt;i&gt; 요소에 포함된 텍스트의 서식을 자유롭게 변경할 수 있습니다.<br>
+				&lt;i&gt; 요소는 평범한 글자와 구분하기 위해 사용됩니다.<br>
+				예를 들면, 기술적인 용어(전문용어), 외국어 문구, 소설속 인물의 생각, 다른 언어의 관용구, 문어체, 서양 문헌에 나오는 배 이름 등이 있습니다.
+			</p>
+
+			<div class="line_code mt_s">
+				<p class="t_blue"><b>CSS 기본값 : i {font-style: italic;}</b></p>
+			</div>
+
+			<div class="txt_ex mt_m">
+				<b>다음과 같은 의미 요소(semantic element) 중에서 사용하기에 적당한 요소를 찾지 못했을 때만 &lt;i&gt; 요소를 사용할 수 있습니다.</b>
+				<p class="indent">
+					강조된 텍스트로 나타낼떄 <mark>&lt;em&gt;</mark> 요소 사용<br>
+					중요한(중요성) 텍스트로 나타낼때 <mark>&lt;strong&gt;</mark> 요소 사용<br>
+					창작물의 제목, 작품(책,플레이,음악)의 이름을 표시할때는 <mark>&lt;cite&gt;</mark> 요소 사용<br>
+					용어(term)의 정의 인스턴스를 표시할때는 <mark>&lt;dfn&gt;</mark> 요소 사용<br>
+					하이라이트된(highlighted) 텍스트로 나타낼때 <mark>&lt;mark&gt;</mark> 요소 사용
+				</p>
+			</div>
+
+			<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.3.i_element.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<div class="txt_ex mt_m">
+				<b><mark>&lt;i&gt;</mark> vs. <mark>&lt;em&gt;</mark></b>
+				<p class="indent">
+					신입 개발자들은 글자를 강조하는데에 왜 이렇게 많은 요소들이 있는지에 대해 혼란스러워합니다.<br>
+					아마도 <mark>&lt;i&gt;</mark>와 <mark>&lt;em&gt;</mark>가 그중 흔한 경우일것입니다..
+					왜 <mark>&lt;em&gt;&lt;/em&gt;</mark>와 <mark>&lt;i&gt;&lt;/i&gt;</mark>를 사용하는걸까요? 분명 그들은 같은 결과를 나타내는데 말입니다.
+				</p>
+				<p class="indent">
+					하지만 전혀 그렇지 않습니다. 두 태그 모두 기본적으로 이탤릭체로 렌더링되지만 의미론적 뜻이 다릅니다.<br>
+					<mark>&lt;em&gt;</mark> 은 내용의 강조를 나타내는데에 비해 <mark>&lt;i&gt;</mark> 태그는 일반적인 글자와 분리된 글자를 나타낼 때 사용합니다.<br>
+					(책이나 영화의 이름, 외국 단어, 혹은 단어가 의미론적 뜻 대신에 단어의 정의를 나타낼 때는 <mark>&lt;cite&gt;</mark> 를 사용해야 합니다.
+				</p>
+				<p class="indent">
+					<mark>&lt;em&gt;</mark> 은 이런식으로 쓰일수 있습니다: &quot;Just do it already!&quot;, 또는: &quot;We had to do something about it&quot;.<br>
+					여기서 이탤릭체로 표현된 단어를 읽는 사용자나 소프트웨어는 이 단어는 강조된 단어라고 판단할 겁니다.
+				</p>
+				<p class="indent">
+					<mark>&lt;i&gt;</mark> 는 이런식으로 쓰일수 있습니다: &quot;The Queen Mary sailed last night&quot;.<br>
+					여기서 &quot;Queen Mary&quot; 단어에 추가된 강조나 중요성은 없습니다. 이건 Mary라는 이름을 가진 여왕이 아니라,
+					Queen Mary 라는 이름을 나타내는것 뿐입니다.<br>
+					<mark>&lt;i&gt;</mark> 에 대한 또 다른 예시로 다음과 같은 문장이 있습니다: &quot;The word the is an article&quot;.
+				</p>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="em">
+				<li class="ie">지원</li>
+				<li class="edge">지원</li>
+				<li class="chrome">지원</li>
+				<li class="firefox">지원</li>
+				<li class="opera">지원</li>
+				<li class="safari">지원</li>
+			</ul>
+		</div>
 	</article>
 	<!-- i element -->
 
 
 	<article id="strong_element" class="uk_course">
 		<h2>strong element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;strong&gt; 요소는 해당 콘텐츠의 중요성이나 심각함, 긴급함 등을 강조할 때 사용합니다.<br>
+				브라우저는 일반적으로 &lt;strong&gt; 요소의 콘텐츠를 굵은 텍스트로 표현합니다.
+			</p>
+			<div class="line_code mt_s">
+				<p class="t_blue"><b>CSS 기본값 : strong {font-weight: bold;}</b></p>
+			</div>
+
+			<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.4.strong_element.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<div class="txt_ex mt_m">
+				<b><mark>&lt;strong&gt;</mark> vs. <mark>&lt;em&gt;</mark></b>
+				<p class="indent">
+					HTML4에서 Strong 은 좀 더 강한 emphasis로 인식되었습니다.
+					하지만 HTML5에서 Strong 태그는 &quot;content에서 가장 중요한 부분&quot;을 나타냅니다. 이것이 가장 큰 차이점입니다.
+					Emphasis는 (&quot;I love carrots&quot; vs. &quot;I love carrots&quot;) 와 같은 구어체 강조와 같이 문장의 의미를 변경하는데 사용되지만,
+					Strong은 (e.g., &quot;Warning! This is very dangerous.&quot;) 와 같이 문장의 일부분에 중요도를 추가하고 싶을 때 사용됩니다.
+					Strong과 Emphasis 는 각각 중첩해서 사용함으로써 중요성이나 강조의 상대적인 정도를 증가시킬 수 있습니다.
+				</p>
+			</div>
+
+			<div class="txt_ex mt_m">
+				<b><mark>&lt;strong&gt;</mark> vs. <mark>&lt;b&gt;</mark></b>
+				<p class="indent">
+					<mark>&lt;b&gt;</mark> 요소는 콘텐츠의 중요성보다는 텍스트 자체에 주의를 끌기 위해 사용되지만,
+					<mark>&lt;strong&gt;</mark> 요소는 콘텐츠 자체의 중요성을 강조할 때 사용됩니다.
+				</p>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="em">
+				<li class="ie">지원</li>
+				<li class="edge">지원</li>
+				<li class="chrome">1.0</li>
+				<li class="firefox">1.0</li>
+				<li class="opera">지원</li>
+				<li class="safari">지원</li>
+			</ul>
+		</div>
 	</article>
 	<!-- strong element -->
 
 
 	<article id="b_element" class="uk_course">
 		<h2>b element</h2>
+
+		<div class="indent mt_l">
+			<p>
+				&lt;b&gt; 요소는 다른 부가적인 목적 없이 단순히 굵게 표현되는 텍스트를 정의할 때 사용합니다.<br>
+				HTML5에서 제목(heading)은 &lt;h1&gt;부터 &lt;h6&gt; 요소로, 강조된 텍스트는 &lt;em&gt; 요소로,
+				중요한 의미를 가지는 텍스트는 &lt;strong&gt; 요소로, 마지막으로 하이라이트된(highlighted)
+				텍스트는 &lt;mark&gt; 요소로 표현되어야 합니다.
+			</p>
+			<p class="mt_s">
+				따라서 위의 태그들에서 적절한 태그를 찾을 수 없을 때만 마지막 선택지로 &lt;b&gt; 태그를 사용해야 합니다.<br>
+				&lt;b&gt; 요소를 사용한 굵은 텍스트는 CSS의 font-weight 속성을 사용해도 같은 결과를 얻을 수 있습니다.
+			</p>
+
+			<div class="ol_lst indent mt_s">
+				<ol>
+					<li>
+						&lt;b&gt; 요소와 &lt;strong&gt;, &lt;em&gt;,&lt;mark&gt; 요소들을 혼동하지 마세요.<br>
+						&lt;strong&gt; 요소는 중요한 글자를 나타내며, &lt;em&gt; 요소는 글자에 약간의 강조를 주며, &lt;mark&gt; 요소는 글자의 관련성을 나타냅니다.<br>
+						&lt;b&gt; 요소는 어떠한 특별한 시멘틱 정보를 전달하지 않습니다. 다른 맞는 요소가 없을떄 사용합니다.
+					</li>
+					<li>
+						유사하게, &lt;b&gt; 요소를 타이틀과 제목을 표시하는데 쓰지 마세요.<br>
+						For this purpose, use the &lt;h1&gt; to &lt;h6&gt; tags. Further, stylesheets can change the default style of these elements,
+						with the result that they are not necessarily displayed in bold.
+					</li>
+					<li>
+						추가 의미 정보를 전달하기 위해 클래스 속성 을 사용하는 것이 좋습니다<br>
+						(예 &lt;b class=&quot;lede&quot;&gt;: 단락의 첫 문장). 이를 통해 HTML 코드를 변경하지 않고도 웹 문서의 여러 스타일을 쉽게 개발할 수 있습니다.
+					</li>
+					<li>
+						&lt;b&gt; 요소를 사용하는데에 있어 아무런 시멘틱 목적이 없다면, CSS 속성 font-weight:bold 값을 사용하는것이 글자를 굵게 만드는데에 더 좋습니다.
+					</li>
+				</ol>
+			</div>
+
+			<div class="line_code mt_m">
+				<p class="t_blue"><b>CSS 기본값 : b {font-weight: bold;}</b></p>
+			</div>
+
+			<div class="view_editor edit_code mt_m" data-target="html/05-textLevel/5.5.b_element.html">
+				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
+					<div class="code_wrap"><textarea></textarea></div>
+				</div>
+			</div>
+
+			<ul class="browser_support mt_l" data-tit="b">
+				<li class="ie">지원</li>
+				<li class="edge">지원</li>
+				<li class="chrome">지원</li>
+				<li class="firefox">1.0</li>
+				<li class="opera">지원</li>
+				<li class="safari">지원</li>
+			</ul>
+		</div>
 	</article>
 	<!-- b element -->
 
