--- a/assets/01-html/01-htmlStart/03-html_element.html
+++ b/assets/01-html/01-htmlStart/03-html_element.html
@@ -25,8 +25,8 @@
 				위 이미지 예제에서는 문단이 끝나는 위치를 나타냅니다.<br>
 				초보자가 가장 흔히 범하는 오류 중 하나가 닫는 태그를 쓰지 않는 것으로 마크업 구조의 표준에 어긋나게 됩니다.
 			</li>
-			<li>내용(content): 이것은 요소의 내용(content)으로 이 예제에서는 그냥 텍스트입니다.</li>
-			<li>요소(element): 요소는 여는 태그와 닫는 태그, 그리고 콘텐츠로 이루어집니다.</li>
+			<li>내용(Content): 이것은 요소의 내용(Content)으로 이 예제에서는 그냥 텍스트입니다.</li>
+			<li>요소(Element): 요소는 여는 태그와 닫는 태그, 그리고 콘텐츠로 이루어집니다.</li>
 		</ol>
 	</section>
 
@@ -34,18 +34,18 @@
 		<h2>1.3.1 전역 속성(Global Attributes)</h2>
 		<p>
 			모든 HTML 요소에서 공통적으로 사용 가능한 속성.<br>
-			[attribute]에는 전역속성(Global Attributes), 이벤트속성(Event Attributes), 요소별 사용되는 속성으로 구분될 수 있음.<br>
-			아래 열거된 내용 외에 더 많은 속성이 있음.<br>
+			[attribute]에는 전역속성(Global Attributes), 이벤트속성(Event Attributes), 요소별 사용되는 속성으로 구분됩니다.<br>
+			아래 열거된 내용 외에 더 많은 속성이 있습니다.<br>
 			<span class="reference">참조 : <a href="https://www.w3.org/TR/html51/dom.html#global-attributes" target="_blank" title="새창열림" class="fas">W3C 전역속성</a></span>
 		</p>
 
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[class] <span class="t_blue">&lt;element class=&quot;name&quot;&gt;</span></h3>
 			<p class="mt_sm">
-				class global속성은 요소 클래스의 공백으로 구분된 목록입니다.<br>
-				한 페이지 내에서 같은 name을 사용할 수 있으며, 한 요소에 여러 name을 지정할 수 있음.<br>
+				class global속성은 요소 클래스의 공백으로 구분된 목록.<br>
+				한 페이지 내에서 같은 name을 사용할 수 있으며, 한 요소에 여러 name을 지정 가능.<br>
 				첫 name은 숫자, 대문자, 특수문자로 시작 불가.(ex. class="2name", class="Name", class="+name" 등)<br>
-				항상 소문자로 시작하며, 특수문자는 _(언더스코어), -(하이픈)만 적용가능.(ex. class="btn", class="btn-list", class="btn_list" 등)<br>
+				항상 소문자로 시작하며, 특수문자는 '_(언더스코어)', '-(하이픈)'만 적용이 가능.(ex. class="btn", class="btn-list", class="btn_list" 등)<br>
 				CSS 혹은 JavaScript의 요소 선택기(CSS 선택자나 getElementsByClassName(), querySelectorAll(selector) 같은)를 통해서 요소를 선택하거나 접근.
 			</p>
 			<aside class="browser_support mt_s" data-tit="class">
@@ -64,8 +64,8 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[id] <span class="t_blue">&lt;element id=&quot;name&quot;&gt;</span></h3>
 			<p class="mt_sm">
-				문서에서 고유한 식별자(identifier, ID)를 정의.<br>
-				한 페이지내에서 유일한 name을 가지고 있어야 하며, 같은 name은 중복으로 사용 불가.<br>
+				문서에서 고유한 식별자(Identifier, ID)를 정의.<br>
+				한 페이지 내에서 유일한 name을 가지고 있어야 하며, 같은 name은 중복으로 사용 불가.<br>
 				CSS 혹은 JavaScript의 요소 선택기(CSS 선택자나 getElementById(), Document.querySelector() 같은)를 통해서 요소를 선택하거나 접근.
 			</p>
 			<aside class="browser_support mt_s" data-tit="id">
@@ -85,7 +85,7 @@
 			<h3 class="ml_mn">[style] <span class="t_blue">&lt;element style=&quot;value&quot;&gt;</span></h3>
 			<p class="mt_sm">
 				요소에 적용할 CSS를 선언.<br>
-				인라인 스타일 방식이며, CSS우선순위에서는 1순위에 해당한다.
+				인라인 스타일 방식이며, CSS 우선 순위에서는 1순위에 해당.
 			</p>
 			<aside class="browser_support mt_s" data-tit="style">
 				<ul>
@@ -165,13 +165,13 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[draggable] <i class="fab fa-html5"></i> <span class="t_blue">&lt;element draggable=&quot;true | false&quot;&gt;</span></h3>
 			<p class="mt_sm">
-				요소가 <span class="reference"><a href="https://developer.mozilla.org/en-US/docs/Web/API/HTML_Drag_and_Drop_API" target="_blank">Drag and Drop API</a></span> 를 사용 가능한지 여부를 지정.
+				요소가 <span class="reference"><a href="https://developer.mozilla.org/en-US/docs/Web/API/HTML_Drag_and_Drop_API" target="_blank">Drag and Drop API</a></span>를 사용 가능한지 여부를 지정.
 			</p>
 			<div class="ol_lst">
 				<ol>
-					<li>이 속성이 설정되지 않은 경우 기본값은 auto입니다.</li>
-					<li>true 는 요소가 드래그 될 수 있음을 나타냅니다.</li>
-					<li>false 는 요소가 드래그되지 않을 수 있음을 나타냅니다.</li>
+					<li>이 속성이 설정되지 않은 경우 기본값은 auto.</li>
+					<li>'true'는 요소가 드래그 될 수 있음을 나타냄.</li>
+					<li>'false'는 요소가 드래그되지 않을 수 있음을 나타냄.</li>
 				</ol>
 			</div>
 			<div class="view_editor ex_code mt_s" data-target="html/01-htmlStart/1.3.draggable.html">
@@ -195,8 +195,8 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[hidden] <span class="t_blue">&lt;element hidden&gt;</span></h3>
 			<p class="mt_sm">
-				기본적으로 hidden 속성은 boolean attribute(불리언 속성)입니다.<br>
-				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false값을 가지게 되며, 명시하면 자동으로 true값을 가지게 됩니다.<br>
+				기본적으로 hidden 속성은 boolean attribute(불리언 속성).<br>
+				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false값을 가지게 되며, 명시하면 자동으로 true값을 가짐.<br>
 				해당요소를 숨김(CSS 기본값 : display:none;).
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/01-htmlStart/1.3.hidden.html">
@@ -248,18 +248,18 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[contenteditable] <i class="fab fa-html5"></i> <span class="t_blue">&lt;element contenteditable=&quot;true&quot;&gt;</span></h3>
 			<p class="mt_sm">
-				사용자가 요소를 편집할 수 있는지 여부를 나타내는 열거형 속성입니다.<br>
-				이 경우 브라우저는 위젯을 수정하여 편집을 허용하도록 합니다.<br>
-				속성값은 다음 값 중 하나이어야 합니다.<br><br>
+				사용자가 요소를 편집할 수 있는지 여부를 나타내는 열거형 속성.<br>
+				이 경우 브라우저는 위젯을 수정하여 편집을 허용함.<br>
+				속성값은 다음 값 중 하나이어야 함.<br><br>
 
-				true 혹은 빈 문자열 : 요소를 편집 가능하도록 지정합니다.<br>
-				false, 요소를 편집할 수 없도록 지정합니다.<br>
-				이 속성을 설정하지 않으면 기본값은 상위 요소에서 상속됩니다.<br><br>
+				true 혹은 빈 문자열 : 요소를 편집 가능하도록 지정.<br>
+				false : 요소를 편집할 수 없도록 지정.<br>
+				이 속성을 설정하지 않으면 기본값은 상위 요소에서 상속됨.<br><br>
 
-				이 속성은 Boolean 속성이 아니라 열거형 속성입니다.<br>
+				이 속성은 Boolean 속성이 아니라 열거형 속성.<br>
 				이는 속성값으로 true, false 또는 빈 문자열 중 하나를 명시적으로 사용하는 것이 필수적이라는 것을 의미하며,<br>
-				<code>&lt;label contenteditable&gt;Example Label&lt;/label&gt;</code>와 같은 축약적인 표현은 허용되지 않습니다.<br>
-				올바른 사용법은 <code>&lt;label contenteditable=&quot;true&quot;&gt;Example Label&lt;/label&gt;</code> 입니다.
+				<code>&lt;label contenteditable&gt;Example Label&lt;/label&gt;</code>와 같은 축약적인 표현은 허용되지 않음.<br>
+				올바른 사용법은 <code>&lt;label contenteditable=&quot;true&quot;&gt;Example Label&lt;/label&gt;</code>.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/01-htmlStart/1.3.contenteditable.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
@@ -282,32 +282,32 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[dir] <span class="t_blue">&lt;element dir=&quot;ltr | rtl | auto&quot;&gt;</span></h3>
 			<p class="mt_sm">
-				열거형 속성으로 요소의 텍스트에 대한 방향성을 나타냅니다. 이 속성은 다음과 같은 값을 가질 수 있습니다.<br>
-				dir 속성은 (base, br, frame, frameset, hr, iframe, param, script)태그에서는 유효하지 않습니다.
+				열거형 속성으로 요소의 텍스트에 대한 방향성을 나타내며, 이 속성은 다음과 같은 값을 가질 수 있음.<br>
+				dir 속성은 (base, br, frame, frameset, hr, iframe, param, script)태그에서는 유효하지 않음.
 			</p>
 			<div class="ol_lst indent mt_sm">
 				<ol>
 					<li class="line_code font14">
 						<strong>ltr</strong>
-						<p>왼쪽에서 오른쪽 방향을 의미하며, 영어와 같이 왼쪽에서 오른쪽으로 기술되는 언어에 사용됩니다.</p>
+						<p>왼쪽에서 오른쪽 방향을 의미하며, 영어와 같이 왼쪽에서 오른쪽으로 기술되는 언어에 사용.</p>
 					</li>
 					<li class="line_code font14">
 						<strong>rtl</strong>
-						<p>오른쪽에서 왼쪽 방향을 의미하며, 아랍어와 같이 오른쪽에서 왼쪽으로 기술되는 언어에 사용됩니다.</p>
+						<p>오른쪽에서 왼쪽 방향을 의미하며, 아랍어와 같이 오른쪽에서 왼쪽으로 기술되는 언어에 사용.</p>
 					</li>
 					<li class="line_code font14">
 						<strong>auto</strong>
-						<p>사용자 에이전트가 결정하도록 합니다. 이 방식은 요소의 내부에 있는 문자를 강한 방향성(strong directionality)을 갖는 문자를 찾을 때까지 파싱을 계속해 나가며, 찾은 방향성을 요소 전체에 적용하는 기본적인 알고리즘을 사용합니다.</p>
+						<p>사용자 에이전트가 결정하도록 함. 이 방식은 요소의 내부에 있는 문자를 강한 방향성(Strong Directionality)을 갖는 문자를 찾을 때까지 파싱을 계속해 나가며, 찾은 방향성을 요소 전체에 적용하는 기본적인 알고리즘을 사용함.</p>
 					</li>
 				</ol>
 			</div>
 			<p class="mt_sm">
-				이 속성은 의미적으로 다른 뜻을 가지는 <code>&lt;bdo&gt;</code> 요소에 필수 속성입니다.<br>
-				이 속성은 <code>&lt;bdi&gt;</code> 요소의 속성을 상속하지 않습니다. 따로 설정되지 않으면 그 값은 auto입니다.<br>
-				CSS 페이지가 활성화되고 해당 요소가 CSS 속성인 direction와 unicode-bidi을 지원하는 경우, 이들 속성에 의해 오버라이드 될 수 있습니다.<br>
-				텍스트의 방향은 내용과 의미적으로 관련되고 표시 방식과는 관련이 없으므로 웹 개발자는 가능한 관련 CSS속성 대신 이 속성을 사용하는 것이 좋습니다.<br>
-				이렇게 하면 CSS를 지원하지 않거나 CSS가 비활성화된 브라우저에서도 텍스트가 올바르게 표시됩니다.<br>
-				auto값은 사용자 입력 데이터와 같이 데이터의 방향성을 모르며, 최종적으로 데이터베이스에 저장되는 데이터일 경우에만 사용되어야 합니다.
+				이 속성은 의미적으로 다른 뜻을 가지는 <code>&lt;bdo&gt;</code> 요소에 필수 속성.<br>
+				이 속성은 <code>&lt;bdi&gt;</code> 요소의 속성을 상속하지 않으며, 따로 설정되지 않으면 그 값은 auto.<br>
+				CSS 페이지가 활성화되고 해당 요소가 CSS 속성인 direction와 unicode-bidi을 지원하는 경우, 이들 속성에 의해 오버라이드 될 수 있음.<br>
+				텍스트의 방향은 내용과 의미적으로 관련되고 표시 방식과는 관련이 없으므로 웹 개발자는 가능한 관련 CSS속성 대신 이 속성을 사용하는 것을 권장.<br>
+				이렇게 하면 CSS를 지원하지 않거나 CSS가 비활성화된 브라우저에서도 텍스트가 올바르게 표시됨.<br>
+				auto값은 사용자 입력 데이터와 같이 데이터의 방향성을 모르며, 최종적으로 데이터베이스에 저장되는 데이터일 경우에만 사용.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/01-htmlStart/1.3.dir.html">
 				<div  class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
